<resources>
    <string name="app_name">ShoppingListApp</string>
    <string name="action_settings">Settings</string>
    <string name="db_name">shopping-list-app-db</string>
    <string name="db_products_table">products</string>
    <string name="db_products_name_column">name</string>
    <string name="db_products_price_column">price</string>
    <string name="db_products_purchased_column">purchased</string>
    <string name="db_products_count_column">count</string>
    <string name="productFormNameValidateToast">Enter the name first</string>
    <string name="productFormPriceValidateToast">Enter the price first</string>
    <string name="productFormCountValidateToast">Enter the count first</string>
    <string name="auth.button.signin">Sign in</string>
    <string name="action_shops">Shops</string>
    <string name="shopFormNameValidateToast">Enter the shop name first</string>
    <string name="shopFormDescriptionValidateToast">Enter the shop description first</string>
    <string name="shopFormRadiusValidateToast">Enter the location radius first</string>
    <string name="shopFormLocationPermissionRequired">Cannot save shop without location permissions</string>
    <string name="shopFormEnableGps">Please enable GPS</string>
    <string name="title_activity_shop_map">Map</string>
    <string name="channel_name">Shopping List App notification channel</string>
    <string name="channel_description">Channel for shop locations from the Shopping List App</string>
    <string name="shop_enter_notification_title">Welcome to %1$s!</string>
    <string name="shop_enter_notification_content">Have a nice visit.</string>
    <string name="shop_exit_notification_title">You are leaving %1$s</string>
    <string name="shop_exit_notification_content">See you later!</string>
    <string name="widget_web_button">Google</string>
    <string name="widget_image_prev"><![CDATA[<<]]></string>
    <string name="widget_image_next"><![CDATA[>>]]></string>
    <string name="widget.images.contentdescription">Kitten images</string>
    <string name="widget_music_prev"><![CDATA[|<]]></string>
    <string name="widget_music_next"><![CDATA[>|]]></string>
    <string name="widget_music_title">Music</string>
    <string name="widget_music_stop">Stop</string>
    <string name="widget_music_resume">Resume</string>
    <string name="widget_music_pause">Pause</string>
</resources>
