<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#09C"
    android:padding="@dimen/widget_margin">

    <Button
        android:id="@+id/widget_web_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/widget_web_button"/>

    <ImageView
        android:id="@+id/widget_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/widget_web_button"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/widget.images.contentdescription"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/widget_image_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/widget_image"
        android:text="@string/widget_image_prev"/>

    <Button
        android:id="@+id/widget_image_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_image"
        android:layout_alignParentEnd="true"
        android:text="@string/widget_image_next"/>

    <TextView
        android:id="@+id/widget_music_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_image_next"
        android:layout_centerHorizontal="true"
        android:text="@string/widget_music_title"/>

    <Button
        android:id="@+id/widget_music_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/widget_image_prev"
        android:text="@string/widget_music_prev"/>

    <Button
        android:id="@+id/widget_music_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_image_next"
        android:layout_alignParentEnd="true"
        android:text="@string/widget_music_next"/>

    <Button
        android:id="@+id/widget_music_pause_resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/widget_music_prev"/>

    <Button
        android:id="@+id/widget_music_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/widget_music_next"
        android:layout_alignParentEnd="true"
        android:text="@string/widget_music_stop"/>
</RelativeLayout>